fix: added logout button, fixed error messages visibility

--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,7 @@ body {
 .auth0-lock-overlay {
   opacity: 0 !important;
 }
+
+.auth0-lock.auth0-lock .auth0-lock-content-wrapper {
+  overflow: visible !important;
+}
